Fixed the hight of the nav bar on mobile

--- a/static/styles.css
+++ b/static/styles.css
@@ -181,7 +181,7 @@ body{
 .navSideBar{
     min-width: 224px;
     max-width: 224px;
-    height: 100vh;
+    height: 100dvh;
     background-color: var(--background_secondary);
     display: flex;
     flex-direction: column;
@@ -1341,7 +1341,7 @@ main{
 
 .container404{
     width: 100%;
-    height: 100vh;
+    height: 100dvh;
     display: flex;
     flex-direction: column;
     gap: 16px;
